# pipeline-debug-agent

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEPLOYMENT.md  README.md  __main__.py  dashboard.py  dashboard_backends.py  graph.py  pyproject.toml  state.py
.github/workflows/: ci.yml
airflow/: README.md
airflow/dags/: debug_agent_dag.py  example_pipeline_dag.py
config/: goal.py
config/checks/: example.yaml
demo/: run_demo.py
dev/: run_real.py
dev/iceberg/: .pyiceberg.yaml  README.md  docker-compose.yml  smoke_test.py  verify_loop.py
dev/iceberg/trino/: iceberg.properties
docs/: architecture.md
integrations/: airflow_trigger.py  git_client.py  lineage.py  llm.py  runbook.py  runner.py  validation.py  warehouse.py
nodes/: analyze.py  fix.py  submit_pr.py  test.py  tiering.py
observability/: trace.py
runbooks/: README.md  TEMPLATE.md  null-userid-042.md
tests/: test_airflow_trigger.py  test_end_to_end.py  test_git_client.py  test_lineage.py  test_runbook.py  test_runner.py  test_tiering.py  test_trace.py  test_validation.py  test_warehouse.py
