[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pipeline-debug-agent"
version = "0.1.0"
description = "AI agent ที่ debug data pipeline ที่ fail แล้วเปิด PR ให้คนรีวิว (LangGraph)"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.4",
    "langchain-anthropic>=0.2",
    "pyarrow>=14.0",   # คำนวณสถิติ output จาก Iceberg scan (read path ของ Check)
    "duckdb>=1.0",     # engine รัน fix SQL แบบ offline ของ runner/demo/test (ไม่ใช่ warehouse)
    "pyyaml>=6.0",     # โหลด per-issue check config (config/checks/<issue_id>.yaml)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "pre-commit>=3.5",
]
github = [
    "PyGithub>=2.0",   # เปิด PR จริงผ่าน GitHub API (โหมด offline/stub ไม่ต้องใช้)
]
iceberg = [
    "pyiceberg>=0.7",  # catalog + scan ของ Apache Iceberg (read path ของ Check)
    # หมายเหตุ: เพิ่ม storage extra ตาม backend เช่น pyiceberg[s3fs] / [adlfs] / [gcsfs]
    #          และ catalog client ตามที่ใช้ (REST/Glue/Hive/SQL)
    # (pyarrow เป็น core dep อยู่แล้ว — ใช้คำนวณสถิติจาก scan)
]
trino = [
    "trino>=0.328",    # รัน fix SQL ลง Iceberg จริงผ่าน Trino (RUNNER=trino)
]
observability = [
    "langfuse>=2.0",   # open-source observability (ทางเลือกแทน LangSmith)
]

# flat layout (app ไม่ใช่ library) — บอก setuptools ตรงๆ ว่า package/module ไหนบ้าง
# ไม่งั้น auto-discovery จะ error "Multiple top-level packages" (demo/tests ไม่ใช่ของที่จะ install)
[tool.setuptools]
packages = ["config", "nodes", "integrations", "observability"]
py-modules = ["graph", "state"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
# E/F = pyflakes+pycodestyle, I = isort, UP = pyupgrade, B = bugbear
select = ["E", "F", "I", "UP", "B"]

